// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns single PRG and BRQ result 1`] = `
Array [
  Object {
    "city": Object {
      "locationId": "prague_cz",
      "name": "Prague",
      "slug": "prague-czech-republic",
    },
    "country": null,
    "location": Object {
      "latitude": 50.1008333,
      "longitude": 14.26,
    },
    "locationId": "PRG",
    "name": "Václav Havel Airport Prague",
    "slug": "vaclav-havel-airport-prague-prague-czech-republic",
    "subdivision": null,
    "timezone": "Europe/Prague",
    "type": "airport",
  },
  Object {
    "city": Object {
      "locationId": "brno_cz",
      "name": "Brno",
      "slug": "brno-czech-republic",
    },
    "country": null,
    "location": Object {
      "latitude": 49.1513889,
      "longitude": 16.6944444,
    },
    "locationId": "BRQ",
    "name": "Brno–Tuřany",
    "slug": "brno-turany-brno-czech-republic",
    "subdivision": null,
    "timezone": "Europe/Prague",
    "type": "airport",
  },
]
`;

exports[`returns single PRG result 1`] = `
Object {
  "city": Object {
    "locationId": "prague_cz",
    "name": "Prague",
    "slug": "prague-czech-republic",
  },
  "country": null,
  "location": Object {
    "latitude": 50.1008333,
    "longitude": 14.26,
  },
  "locationId": "PRG",
  "name": "Václav Havel Airport Prague",
  "slug": "vaclav-havel-airport-prague-prague-czech-republic",
  "subdivision": null,
  "timezone": "Europe/Prague",
  "type": "airport",
}
`;
